test/spec/return.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/return.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/return.wast:274:54: type mismatch of return. got void, expected f64
  (module (func $type-value-void-vs-num (result f64) (return)))
                                                     ^
assert_invalid error:
  third_party/testsuite/return.wast:278:61: type mismatch of return. got i64, expected f64
  (module (func $type-value-num-vs-num (result f64) (return (i64.const 1))))
                                                            ^
60/60 tests passed.
;;; STDOUT ;;)
